force-app/main/default/objects/Activation_Token__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Sent_Date__c</fullName>
        <label>Email Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Retried_Date__c</fullName>
        <label>Last Retried Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Retry_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Retry Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Firstname__c</fullName>
        <formula>User__r.FirstName</formula>
        <label>User Firstname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Fullname__c</fullName>
        <formula>User__r.Full_Name__c</formula>
        <label>User Fullname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Activation_Tokens</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Activation Token</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Token__c</columns>
        <columns>Active__c</columns>
        <columns>Retry_Count__c</columns>
        <columns>Last_Retried_Date__c</columns>
        <columns>Send_Email__c</columns>
        <columns>Email_Sent__c</columns>
        <columns>Email_Sent_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Token #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activation Tokens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>User_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(User__c)</errorConditionFormula>
        <errorMessage>User is Required</errorMessage>
    </validationRules>
</CustomObject>